:art: Tweaks to partial pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <developer>
       <id>pmonks</id>
       <name>Peter Monks</name>
-      <email>pmonks@gmail.com</email>
+      <email>pmonks+futbot@gmail.com</email>
     </developer>
   </developers>
 
