--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           tools-deps: latest
 
-      - name: Download dependencies
-        run: clojure -Srepro -e "(println \"Dependencies downloaded\")"
-      - name: Check for outdated dependencies
-        run: clojure -Srepro -Aoutdated
+      - name: Construct git info
+        run: clojure -Srepro -Agit-info-edn
       - name: Check code
         run: clojure -Srepro -Acheck
+      - name: Check for outdated dependencies
+        run: clojure -Srepro -Aoutdated
