:green_heart: Switch to uberjar for faster starts/restarts

--- a/bin/build
+++ b/bin/build
@@ -1,2 +1,4 @@
 #!/usr/bin/env bash
-clojure -Srepro -Agit-info-edn
+clojure -Srepro -e '(println "Dependencies downloaded")'
+clojure -Srepro -A:git-info-edn
+clojure -Srepro -A:uberjar
