--- a/bin/build
+++ b/bin/build
@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
 clojure -Srepro -e '(println "Dependencies downloaded")'
 clojure -Srepro -A:git-info-edn
+clojure -Srepro -Spom
 clojure -Srepro -A:uberjar
