:ambulance: Replace use of -A with -M, as the former no longer functions the way it used to (or rather, shortly will not)

--- a/bin/build
+++ b/bin/build
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
 clojure -Srepro -e '(println "Dependencies downloaded")'
-clojure -Srepro -A:git-info-edn
+clojure -Srepro -M:git-info-edn
 clojure -Srepro -Spom
-clojure -Srepro -A:uberjar
+clojure -Srepro -M:uberjar
