:green_heart: Fix GitHub breakage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: build
 
 on: [push, pull_request]
 
+# Workaround until https://github.com/DeLaGuardo/setup-clojure/issues/17 is fixed
 env:
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
