:ambulance: Fix fallout due to backwards incompatible change in GitHub's setup-java action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Install Java LTS
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 11
 
       - name: Install Clojure CLI
