:green_heart: Bring Github build inline with Heroku build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,7 @@ jobs:
           tools-deps: latest
 
       - name: Check code
-        run: clojure -Srepro -M:check
+        run: bin/check.sh
+
+      - name: Build code
+        run: bin/build
