:green_heart: Separate lint from build

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           tools-deps: latest
 
-      - name: Build code
-        run: bin/build
+      - name: Compile and lint code
+        run: bin/check.sh
