:new: [#222] Migrate to tools.build

--- a/bin/build
+++ b/bin/build
@@ -4,10 +4,10 @@ set -e
 set -o pipefail
 
 echo "ℹ️ Downloading dependencies..."
-clojure -Srepro -P --report stderr
+clojure -Srepro -J-Dclojure.main.report=stderr -P
 
 echo "ℹ️ Updating pom.xml..."
-clojure -Srepro -Spom --report stderr
+clojure -Srepro -J-Dclojure.main.report=stderr -Spom
 
 echo "ℹ️ Building uberjar..."
-clojure -Srepro -X:uberjar    # Note: Clojure CLI doesn't support --report with -X 🙄; see https://ask.clojure.org/index.php/10692/clojure-cli-report-incompatible-with-x for details
+clojure -Srepro -J-Dclojure.main.report=stderr -T:build uber    # Note: Clojure CLI doesn't support --report with -X or -T 🙄; see https://ask.clojure.org/index.php/10692/clojure-cli-report-incompatible-with-x for details
