--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,4 @@ jobs:
           tools-deps: latest
 
       - name: Compile and lint code
-        run: bin/check.sh
+        run: clojure -Srepro -J-Dclojure.main.report=stderr -T:build lint
