:art: Rename build fn for clarity, despite shadowing warnings

--- a/bin/build
+++ b/bin/build
@@ -9,5 +9,8 @@ clojure -Srepro -J-Dclojure.main.report=stderr -P
 echo "ℹ️ Updating pom.xml..."
 clojure -Srepro -J-Dclojure.main.report=stderr -Spom
 
+echo "ℹ️ Compiling code..."
+clojure -Srepro -J-Dclojure.main.report=stderr -T:build compile
+
 echo "ℹ️ Building uberjar..."
-clojure -Srepro -J-Dclojure.main.report=stderr -T:build uber    # Note: Clojure CLI doesn't support --report with -X or -T 🙄; see https://ask.clojure.org/index.php/10692/clojure-cli-report-incompatible-with-x for details
+clojure -Srepro -J-Dclojure.main.report=stderr -T:build uber
