--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           tools-deps: latest
 
-      - name: Compile and lint code
+      - name: Run linters
         run: clojure -Srepro -J-Dclojure.main.report=stderr -T:build lint
