--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: 17
-      - uses: DeLaGuardo/setup-clojure@3.7
+          java-version: 11
+      - uses: DeLaGuardo/setup-clojure4.0
         with:
           tools-deps: latest
       - uses: actions/cache@v2
